--- a/User_Auth_WebApp/Views/Shared/_LoginPartial.cshtml
+++ b/User_Auth_WebApp/Views/Shared/_LoginPartial.cshtml
@@ -7,7 +7,7 @@
     {
         <li class="nav-item">
             <a class="nav-link text-muted text-dark">
-                 Hello @userManager.GetUserName(User);
+                 @userManager.GetUserName(User)
              </a>
         </li>
         <li class="nav-item">
